--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=gateway-service
 server.port=8000
-security.enable-csrf=false
+#security.enable-csrf=false
 
 spring.main.web-application-type=reactive
-spring.main.allow-bean-definition-overriding=true
+#spring.main.allow-bean-definition-overriding=true
 
 balance-service.path=/api/v1/accounts/{balanceId}/balances/**
 balance-service.uri=http://localhost:3015
@@ -14,11 +14,11 @@ account-service.uri=http://localhost:3010
 user-service.path=/api/v1/users/**
 user-service.uri=http://localhost:3005
 
-auth-service.path=/api/v1/auth/**
-auth-service.uri=http://localhost:3000
+authentication-authorization-service.path=/api/v1/auth/**
+authentication-authorization-service.uri=http://localhost:3000
 
 transaction-service.path=/api/v1/accounts/{accountId}/**
 transaction-service.uri=http://localhost:3020
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
+#eureka.client.instance.preferIpAddress = true
