--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=gateway-service
 server.port=8000
 #security.enable-csrf=false
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
 
 spring.main.web-application-type=reactive
 #spring.main.allow-bean-definition-overriding=true
